--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" manifest="mani.manifest">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Test Offline</title>
